--- a/_data/reiserouten1.yml
+++ b/_data/reiserouten1.yml
@@ -1,6 +1,7 @@
 
 - id: one
-  title: Garden Route
+  title: "Klassisch: Garden Route"
+  intro: "Südafrikas Garden Route ist der Klassiker unter den Roadtrips. Die knapp 800 Kilometer lange Strecke führt von Port Elizabeth am Addo Nationalpark über Plettenberg Bay, Knysna und Wilderness bis zur Walhauptstadt Hermanus und nach&nbsp;Kapstadt."
   num: "1"
 
   pois:
@@ -12,22 +13,18 @@
         id: img1
         content: "Von der 'Friendly City' Port Elizabeth geht es zum Tsitsikamma National Park. Als Teil des größeren Garden-Route-Nationalparks, zieht er sich direkt an der Küste entlang und reizt mit ganzjährig mildem Klima, immergrünen Wäldern und einem Überangebot an Aktivitäten. Danach zeigt Plettenberg Bay warum er einer der beliebtesten Badeorte an der Garden Route ist."
 
-      - title: Überblick
-        id: img2
-        content: "Südafrikas Garden Route ist der Klassiker unter den Roadtrips. Die knapp 800 Kilometer lange Strecke führt von Port Elizabeth am Addo Nationalpark über Plettenberg Bay, Knysna und Wilderness bis zur Walhauptstadt Hermanus und nach Kapstadt."
-
       - title: Lagunenparadies Knysna
-        id: img3
+        id: img2
         content: "Die charmante Hafenstadt, bekannt für köstliche Austern und eine große Lagune, wird von zwei Sandsteinklippen flankiert. Vom östlichen der Knysna Heads sind spektakuläre Ausblicke auf Stadt und Wasser vorprogrammiert. Als weitere Besonderheit beherbergt Knysna eine große Rastafari-Community, die im Rahmen einer Township Tour besucht werden kann."
 
       - title: "Wilderness & Map of Africa"
-        id: img4
+        id: img3
         content: "Einige der besten Strände Südafrikas offenbaren sich an einem Ort, der nicht nach seinem Namen aussieht: Wilderness. Daneben lädt das Städtchen zu Kanufahrten und Paragliding ein – und bietet bei Wilderness Heights von 'The Map of Africa' aus eine fantastische Aussicht auf den Kaaimans River, der die Umrisse des Kontinents nachzieht."
 
       - title: Walhauptstadt & Kulturhauptstadt
-        id: img5
-        content: "Weiter westwärts: in Hermanus am Western Cape lassen sich Wale von Juli bis November mit Leichtigkeit beobachten. Als fabelhafter Abschluss wartet schließlich Kapstadt mit seinem Tafelberg und Kap der Guten Hoffnung, Streetart und pulsierender Kultur, Woodstock und Green Point. "
+        id: img4
+        content: "Weiter westwärts: in Hermanus am Western Cape lassen sich Wale von Juli bis November mit Leichtigkeit beobachten. Als fabelhafter Abschluss wartet schließlich Kapstadt mit seinem Tafelberg und dem Kap der Guten Hoffnung, Streetart und pulsierender Kultur, Woodstock und Green Point."
 
       - title: Alternative Strecke zurück?
-        id: img6
+        id: img5
         content: "Lorem ipsum.."
