--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -2,40 +2,40 @@
   layer: "z-index: 13;"
   title: Mehr als die Big Five
   rotation: "transform: rotate(-10deg);"
-  description: "Auf Meer-Safari begegnen Sie neben Haien und Walen auch Delfinen, Robben und Pinguinen. Antilopen und Giraffen sind oft an der Tagesordnung, ebenso Zebras. Hunderte von Vogelarten und Schmetterlingsarten machen schließlich Südafrika attraktiv für jede Art von Tierfreund."
+  description: "Auf Meer-Safari begegnen Sie neben Haien und Walen auch Delfinen, Robben und Pinguinen. Antilopen und Giraffen sind ebenso allgegenwärtig wie Zebras. Hunderte von Vogel- und Schmetterlingsarten machen Südafrika attraktiv für jeden Tierfreund."
 
 - id: two
   layer: "z-index: 12;"
   title: "Safari das ganze Jahr über"
-  rotation: "transform: rotate(10deg);"
-  description: "Das ganze Jahr ist Safari-Zeit. Während Juli und August sich besonders im Krüger-NP für Wildtierbeobachtung eignen, ist die Wüstenlandschaft eines Kgalagadi Transfrontier Park im Herbst oder Winter ideal. Im Frühjahr ist der malariafreie Addo-Park der richtige Ort."
+  rotation: "transform: rotate(7deg);"
+  description: "Das ganze Jahr ist Safari-Zeit. Während Juli und August sich besonders im Krüger-Nationalpark für Wildtierbeobachtung eignen, ist die Wüstenlandschaft eines Kgalagadi-Transfrontier-Nationalparks im Herbst oder Winter ideal. Im Frühjahr ist der Addo-Park der richtige Ort."
 
 - id: three
   layer: "z-index: 11;"
-  title: "Geführter Game Drive"
+  title: "Geführte Pirschfahrten"
   rotation: "transform: rotate(-5deg);"
-  description: "Der Safari-Klassiker ist geführt mit einem ausgebildeten Ranger im Geländewagen. Diese bereichern Ihre Wildtierbeobachtung mit reichlich Hintergrundwissen und können ggf. in kritischen Situationen eingreifen."
+  description: "Das klassische Safari wird von einem ausgebildeten Ranger im Geländewagen geleitet. Die Ranger bereichern Ihre Wildtierbeobachtung mit reichlich Hintergrundwissen und können in kritischen Situationen eingreifen."
 
 - id: four
   layer: "z-index: 14;"
   title: "Self-Drive"
   rotation: "transform: rotate(5deg);"
-  description: "Aber auch selbstständig können Sie auf die Pirsch, dies jedoch nur auf vorgeschriebenen Wegen in den Nationalparks. Private Wildparks sind von dieser Regelung leider ausgeschlossen."
+  description: "Es ist auch möglich, selbstständig auf die Pirsch zu gehen, dies ist jedoch nur auf vorgeschriebenen Wegen in den Nationalparks möglich. Private Wildparks sind von dieser Regelung leider ausgeschlossen."
 
 - id: five
   layer: "z-index: 15;"
   title: "Walking Safari"
-  rotation: "transform: rotate(-2deg);"
-  description: "Sie können gar nicht nah genug an die Tiere herantreten? Eine Buschwanderung zu Fuß ist das Richtige. Ein bewaffneter Ranger begleitet Sie und weist Sie in die Kunst des Spurenlesens ein. Je nach Angebot können Sie im Freien campen oder von Fahrzeugen begleitet werden. Was für ein Adrenalinrausch!"
+  rotation: "transform: rotate(-3deg);"
+  description: "Sie können nicht nah genug an die Tiere herantreten? Eine Buschwanderung zu Fuß ist das Richtige. Ein bewaffneter Ranger begleitet Sie und weist Sie in die Kunst des Spurenlesens ein. Je nach Angebot können Sie im Freien campen oder von Fahrzeugen begleitet werden."
 
 - id: six
   layer: "z-index: 16;"
   title: "Staatliche Nationalparks"
   rotation: "transform: rotate(8deg);"
-  description: "Die 19 Nationalparks werden von einer Reihe staatlicher Parks ergänzt, die in KwaZulu Natal und North West lokal gemanagt werden. Eintrittskosten und Übernachtungspreise in den restcamps sind sehr moderat gehalten, auch als Individualreisende kann man die PArks erkunden."
+  description: "Die 19 Nationalparks werden von einer Reihe staatlicher Parks ergänzt, die in KwaZulu Natal und North West lokal gemanagt werden. Eintrittskosten und Übernachtungspreise in den Restcamps sind sehr moderat gehalten, auch als Individualreisende kann man die Parks erkunden."
 
 - id: seven
   layer: "z-index: 17;"
   title: Private Game Reserves
   rotation: "transform: rotate(2deg);"
-  description: "In einer der vielen privaten Game Lodges können Sie eine Pirschfahrt mit einem Aufenthalt im Luxuszelt same Lagerfeuer-Dinner erleben. Dabei können die Ranger von den vorgeschriebenen Wegen abfahren und den Tieren näher kommen. Meistens sind zwei geführte Fahrten pro Tag im Preis inbegriffen."
+  description: "In einer der vielen privaten Game Lodges können Sie eine Pirschfahrt mit einem Aufenthalt im Luxuszelt samt Lagerfeuer-Dinner erleben. Dabei können die Ranger von den vorgeschriebenen Wegen abfahren und den Tieren näher kommen. Meistens sind zwei geführte Fahrten pro Tag im Preis inbegriffen."
