--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Südafrika
 client:
   name: Client Name
-  link: "https://www.southafrica.net/gl/en/corporate"
+  link: "https://www.southafrica.net/de/de/travel"
 core-se-link: https://www.secretescapes.com/current-sales
 description: >
-  Eine Safari ist mehr als nur Wildtierbeobachtung. In Südafrika gehen Sie auf Großstadt-Safari in Johannesburg, auf Gourmet-Safari in Weingütern und auf Küstensafari auf über 3.000 Strandkilometern. 
+  Eine Safari ist mehr als nur Wildtierbeobachtung. In Südafrika gehen Sie auf Großstadt-Safari in Johannesburg, auf Gourmet-Safari in Weingütern und auf Küstensafari auf über 3.000 Strandkilometern.
 
 # file paths
 url:     "http://mp.secretescapes.com" # the base hostname & protocol for your site
